Alteração de coloração de textos, e implementação de links nos botões

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ives Mendes - Portfólio</title>
     <meta name="description" content="Portfólio de Ives Mendes - Desenvolvedor Full Stack apaixonado por criar soluções inovadoras">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="alternate icon" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -543,13 +545,22 @@
                         <p>
                             Desenvolvimento e manutenção de sistemas utilizando Java legado e Spring Boot (versões 8, 11 e 21). 
                             Desenvolvi uma aplicação completa full-stack com React, Spring Boot e PostgreSQL, além de realizar 
-                            deploy de aplicações através do JBOSS.
+                            deploy de aplicações através do JBOSS. Idealizei e desenvolvi um sistema de busca de contatos para o 
+                            site oficial da empresa, permitindo consultas por andar, bloco, localidade e unidade, facilitando 
+                            a comunicação entre os funcionários.
                         </p>
                         <div class="achievements">
                             <span class="achievement">Manutenção de sistemas legados</span>
                             <span class="achievement">Aplicação React + Spring Boot</span>
                             <span class="achievement">Deploy com JBOSS</span>
                             <span class="achievement">Versionamento Git/GitHub/GitLab</span>
+                            <span class="achievement">Sistema de busca de contatos</span>
+                        </div>
+                        <div class="timeline-actions">
+                            <a href="https://www.agespisa.com.br/site/pages/public/noticiaCompartilhada.jsf?id=1967" target="_blank" class="btn btn-secondary btn-sm">
+                                <i class="fas fa-external-link-alt"></i>
+                                Ver notícia
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -572,7 +583,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>Email</h4>
-                            <p>ives.mendes@email.com</p>
+                            <p>ivesmedes@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -581,7 +592,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>LinkedIn</h4>
-                            <p>linkedin.com/in/ivesmendes</p>
+                            <p>https://www.linkedin.com/in/ives-mendes-757053294/</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -590,7 +601,7 @@
                         </div>
                         <div class="contact-details">
                             <h4>GitHub</h4>
-                            <p>github.com/ivesmendes</p>
+                            <p>https://github.com/ivesmendes</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -599,25 +610,10 @@
                         </div>
                         <div class="contact-details">
                             <h4>Localização</h4>
-                            <p>São Paulo, Brasil</p>
+                            <p>Teresina, Piauí, Brasil</p>
                         </div>
                     </div>
                 </div>
-                <form class="contact-form">
-                    <div class="form-group">
-                        <input type="text" id="name" name="name" placeholder="Seu nome" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" id="email" name="email" placeholder="Seu email" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" id="subject" name="subject" placeholder="Assunto" required>
-                    </div>
-                    <div class="form-group">
-                        <textarea id="message" name="message" placeholder="Sua mensagem" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
-                </form>
             </div>
         </div>
     </section>
@@ -628,7 +624,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <span class="brand-text">IM</span>
-                    <p>Transformando ideias em realidade através do código</p>
+                    <p></p>
                 </div>
                 <div class="footer-links">
                     <h4>Links Rápidos</h4>
@@ -642,15 +638,13 @@
                 <div class="footer-social">
                     <h4>Redes Sociais</h4>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/ivesmendes" class="social-link"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/ives-mendes-757053294/" class="social-link"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Ives Mendes. Todos os direitos reservados.</p>
+                <p>&copy; 2025 Ives Mendes. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
